[project]
name = "content-creation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "newspaper3k>=0.2.8",
    "openai-agents[litellm]>=0.6.4",
    "readability-lxml>=0.8.4.1",
    "streamlit>=1.52.2",
]
